[gd_scene load_steps=25 format=3 uid="uid://dblm6coxmm5nu"]

[ext_resource type="PackedScene" uid="uid://bme5jecl7oi7e" path="res://Prefabs/Scenes/entity.tscn" id="1_3emuv"]
[ext_resource type="Script" path="res://Prefabs/Scripts/enemy_entity.gd" id="2_6dvt7"]
[ext_resource type="Texture2D" uid="uid://g522uqqcquk4" path="res://Assets/Enemies/png/deagle_eagle.png" id="2_xrb5r"]
[ext_resource type="Texture2D" uid="uid://dfwhjp66n3ta4" path="res://Assets/Misc/png/drop-shadow-18x16.png" id="3_ec0ma"]
[ext_resource type="Script" path="res://Prefabs/Components/Scripts/hitbox_component.gd" id="3_vngf3"]
[ext_resource type="PackedScene" uid="uid://ddxlrro2x7yst" path="res://Prefabs/Components/Scenes/targetting_component.tscn" id="4_1rmxj"]
[ext_resource type="Script" path="res://Prefabs/Scripts/states/deagle_eagle_idle_state.gd" id="5_br7fe"]
[ext_resource type="Script" path="res://Prefabs/Scripts/states/deagle_eagle_shoot_state.gd" id="6_4d4gv"]
[ext_resource type="PackedScene" uid="uid://btbf1yuhspoie" path="res://Prefabs/Scenes/enemies/deagle_eagle_projectile_entity.tscn" id="7_5yskq"]
[ext_resource type="Texture2D" uid="uid://bodmews1bolnw" path="res://Assets/Misc/png/circle.png" id="8_ar83j"]
[ext_resource type="Script" path="res://Prefabs/Scripts/states/deagle_eagle_swoop_state.gd" id="10_j7yl7"]
[ext_resource type="Script" path="res://Prefabs/Scripts/states/deagle_eagle_return_to_origin_state.gd" id="12_51ono"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5vyfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xrb5r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_an23t"]
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ykuwv"]
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sdek2"]
height = 46.6691

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjtsc"]
height = 46.6691

[sub_resource type="CircleShape2D" id="CircleShape2D_frail"]
radius = 439.001

[sub_resource type="Curve" id="Curve_bv1ys"]
max_value = 2.0
_data = [Vector2(0, 0.758858), 0.0, 0.0, 0, 0, Vector2(1, 2), 1.5259, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_imlbl"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.553488, 0.804651, 0.888372, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.996078, 0.905882, 0.380392, 1, 0.996078, 0.905882, 0.380392, 1, 0.996078, 0.403922, 0.203922, 1, 0.247059, 0.156863, 0.196078, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h6d8v"]
radius = 5.0
height = 26.0

[sub_resource type="Curve" id="Curve_brykr"]
_data = [Vector2(0, 0.660171), 0.0, 0.0, 0, 0, Vector2(1, 0.42538), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ejy22"]
offsets = PackedFloat32Array(0.00276243, 1)
colors = PackedColorArray(0.752941, 0.796078, 0.862745, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_u50s8"]
radius = 32.0156

[node name="DeagleEagleEntity" groups=["boss"] instance=ExtResource("1_3emuv")]
collision_layer = 128
collision_mask = 0
script = ExtResource("2_6dvt7")
flip_when_aiming = false
diff_flip = false
max_hp = 850.0
entity_id = "DeagleEagle"
use_difficulty_scaling = true

[node name="Drop-shadow-18x16" type="Sprite2D" parent="." index="0"]
position = Vector2(0, -5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ec0ma")

[node name="Animations" parent="." index="1"]
z_index = 1
position = Vector2(0, -41)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_5vyfr")
animation = &"default"

[node name="CollisionBox" parent="." index="2"]
position = Vector2(0, -28)
shape = SubResource("CapsuleShape2D_an23t")

[node name="HitboxComponent" parent="." index="3"]
damage = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(0, -28)
scale = Vector2(1.095, 1.095)
shape = SubResource("CapsuleShape2D_ykuwv")
debug_color = Color(0.757954, 0.453957, 0, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxComponent" index="1"]
position = Vector2(-24, -48)
rotation = -0.785398
scale = Vector2(1.095, 1.095)
shape = SubResource("CapsuleShape2D_sdek2")
debug_color = Color(0.757954, 0.453957, 0, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HitboxComponent" index="2"]
position = Vector2(24, -48)
rotation = 0.785398
scale = Vector2(1.095, 1.095)
shape = SubResource("CapsuleShape2D_cjtsc")
debug_color = Color(0.757954, 0.453957, 0, 0.42)

[node name="HurtboxComponent" parent="." index="4"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -28)
scale = Vector2(1.095, 1.095)
shape = SubResource("CapsuleShape2D_ykuwv")
debug_color = Color(0.979859, 0.141346, 0, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent" index="1"]
position = Vector2(-24, -48)
rotation = -0.785398
scale = Vector2(1.095, 1.095)
shape = SubResource("CapsuleShape2D_sdek2")
debug_color = Color(0.979859, 0.141346, 0, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HurtboxComponent" index="2"]
position = Vector2(24, -48)
rotation = 0.785398
scale = Vector2(1.095, 1.095)
shape = SubResource("CapsuleShape2D_cjtsc")
debug_color = Color(0.979859, 0.141346, 0, 0.42)

[node name="TargettingComponent" parent="." index="5" instance=ExtResource("4_1rmxj")]
top_level = true
boss_music = "finalBoss"

[node name="CollisionShape2D" parent="TargettingComponent/PlayerDetectionArea" index="0"]
shape = SubResource("CircleShape2D_frail")

[node name="StateMachine" parent="." index="6" node_paths=PackedStringArray("starting_state")]
starting_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine" index="0" node_paths=PackedStringArray("shoot")]
script = ExtResource("5_br7fe")
shoot = NodePath("../Shoot")
animation_name = "default"

[node name="Shoot" type="Node2D" parent="StateMachine" index="1" node_paths=PackedStringArray("idle", "swoop")]
script = ExtResource("6_4d4gv")
idle = NodePath("../Idle")
swoop = NodePath("../Swoop")
projectile = ExtResource("7_5yskq")
animation_name = "default"

[node name="ProjectileSpawnPosition" type="Node2D" parent="StateMachine/Shoot" index="0"]
position = Vector2(-26, -21)
scale = Vector2(1.2, 1.2)

[node name="ProjectileSpawnPosition2" type="Node2D" parent="StateMachine/Shoot" index="1"]
position = Vector2(28.5, -21)
scale = Vector2(1.2, 1.2)

[node name="ShootTimer1" type="Timer" parent="StateMachine/Shoot" index="2"]
wait_time = 0.2
one_shot = true

[node name="ShootTimer2" type="Timer" parent="StateMachine/Shoot" index="3"]
wait_time = 0.5
one_shot = true

[node name="ShootTimer3" type="Timer" parent="StateMachine/Shoot" index="4"]
wait_time = 0.8
one_shot = true

[node name="ShootTimer4" type="Timer" parent="StateMachine/Shoot" index="5"]
wait_time = 1.1
one_shot = true

[node name="CooldownTimer" type="Timer" parent="StateMachine/Shoot" index="6"]
wait_time = 2.25
one_shot = true

[node name="DeagleParticles" type="CPUParticles2D" parent="StateMachine/Shoot" index="7"]
z_index = 1
position = Vector2(-26, -21)
emitting = false
lifetime = 0.4
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.45
local_coords = true
texture = ExtResource("8_ar83j")
direction = Vector2(-1, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
linear_accel_max = 1.0
tangential_accel_min = -60.0
tangential_accel_max = 60.0
scale_amount_min = 0.4
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_bv1ys")
color_ramp = SubResource("Gradient_imlbl")

[node name="DeagleParticles2" type="CPUParticles2D" parent="StateMachine/Shoot" index="8"]
z_index = 1
position = Vector2(28.5, -21)
emitting = false
lifetime = 0.4
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.45
local_coords = true
texture = ExtResource("8_ar83j")
direction = Vector2(1, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
linear_accel_max = 1.0
tangential_accel_min = -60.0
tangential_accel_max = 60.0
scale_amount_min = 0.4
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_bv1ys")
color_ramp = SubResource("Gradient_imlbl")

[node name="NullTimer" type="Timer" parent="StateMachine/Shoot" index="9"]
wait_time = 0.5

[node name="Swoop" type="Node2D" parent="StateMachine" index="2" node_paths=PackedStringArray("idle", "return_to_origin")]
script = ExtResource("10_j7yl7")
idle = NodePath("../Idle")
return_to_origin = NodePath("../ReturnToOrigin")
animation_name = "default"

[node name="HitboxComponent" type="Area2D" parent="StateMachine/Swoop" index="0"]
collision_layer = 0
collision_mask = 8
script = ExtResource("3_vngf3")
damage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Swoop/HitboxComponent" index="0"]
position = Vector2(0, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_h6d8v")
debug_color = Color(0.386377, 0.61196, 1.92523e-07, 0.42)

[node name="CooldownTimer" type="Timer" parent="StateMachine/Swoop" index="1"]
wait_time = 2.25

[node name="TalonParticles" type="CPUParticles2D" parent="StateMachine/Swoop" index="2"]
z_index = 1
position = Vector2(-6, -3)
amount = 128
lifetime = 0.3
texture = ExtResource("8_ar83j")
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("Curve_brykr")
color_ramp = SubResource("Gradient_ejy22")

[node name="TalonParticles2" type="CPUParticles2D" parent="StateMachine/Swoop" index="3"]
z_index = 1
position = Vector2(4, -3)
amount = 128
lifetime = 0.3
texture = ExtResource("8_ar83j")
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("Curve_brykr")
color_ramp = SubResource("Gradient_ejy22")

[node name="NullTimer" type="Timer" parent="StateMachine/Swoop" index="4"]
wait_time = 0.5

[node name="ReturnToOrigin" type="Node2D" parent="StateMachine" index="3" node_paths=PackedStringArray("idle")]
script = ExtResource("12_51ono")
idle = NodePath("../Idle")
animation_name = "default"

[node name="OriginArea" type="Area2D" parent="StateMachine/ReturnToOrigin" index="0"]
top_level = true
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/ReturnToOrigin/OriginArea" index="0"]
shape = SubResource("CircleShape2D_u50s8")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="NullTimer" type="Timer" parent="StateMachine/ReturnToOrigin" index="1"]
wait_time = 0.5

[node name="HealthBar" parent="." index="7"]
visible = true
offset_left = -88.0
offset_top = -83.0
offset_right = 1672.0
offset_bottom = -56.0

[node name="RichTextLabel" type="RichTextLabel" parent="HealthBar" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.176419, 0.176419, 0.176419, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_separation = 85
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Deagle Eagle[/center]"
fit_content = true
scroll_active = false

[editable path="TargettingComponent"]
